--- a/index.html
+++ b/index.html
@@ -14,9 +14,63 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/float-grid.css" />
 
 </head>
 <body>
+	<header>
+		<h1 class="row">Star Wars Characters</h1>
+		<h2 class="row">Incomplete List</h2>
+	</header>
+	<main>
+		<div class="row">
+      <div class="col-4">
+        	<div class="box">
+        		<img class="col-12 picbox" src="images/rey_square.png">
+            <div class="boxtext"><b>Ray</b>
+        	 	<p>Protagonist, from Tatooine</div>
+        	</div>
+      </div>
+      <div class="col-4">
+          <div class="box">
+            <img class="col-12 picbox" src="images/finn_square.png">
+            <div class="boxtext"><b>Finn</b>
+            <p>Storm, befriends Ray</p></div>
+          </div>
+      </div>
+     <div class="col-4">
+          <div class="box">
+            <img class="col-12 picbox" src="images/kylo_square.png">
+            <div class="boxtext"><b>Kylo</b>
+            <p>Main villain, or is he?</p></div>
+          </div>
+      </div>
+    </div> 
+    <div class="row">
+      <div class="col-4">
+          <div class="box">
+            <img class="col-12 picbox" src="images/poe_square.png">
+            <div class="boxtext"><b>Poe</b>
+            <p>Neutral pilot</p></div>
+          </div>
+      </div>
+      <div class="col-4">
+          <div class="box">
+            <img class="col-12 picbox" src="images/chewbacca_square.png">
+            <div class="boxtext"><b>Chewbacca</b>
+            <p>A great first mate</p></div>
+          </div>
+      </div>
+     <div class="col-4">
+          <div class="box">
+            <img class="col-12 picbox" src="images/yoda_square.png">
+            <div class="boxtext"><b>Yoda</b>
+            <p>Wize old Jedi master</div>
+          </div>
+      </div>
+    </div> 
 
+    </main>
 </body>
 </html>
